WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245796
[macOS] Stop leaking a boost on GPU and Network processes
https://bugs.webkit.org/show_bug.cgi?id=245796
Summary
[macOS] Stop leaking a boost on GPU and Network processes
Miguel Salinas
Reported
2022-09-28 13:50:17 PDT
We are currently leaking a boost on the GPU process and Network process to grant high CPU and I/O priorities. This is not needed at all for the GPU process since it runs as TASK_APPTYPE_APP_DEFAULT and shouldn't be needed on the Network process as well if we change it to run as TASK_APPTYPE_APP_DEFAULT (which it already does on iOS).
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-28 13:50:43 PDT
<
rdar://problem/100526100
>
Miguel Salinas
Comment 2
2022-09-28 13:55:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4803
EWS
Comment 3
2022-10-05 15:53:10 PDT
Committed
255198@main
(b9d8665c0eb7): <
https://commits.webkit.org/255198@main
> Reviewed commits have been landed. Closing PR #4803 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug