Source/WebKit/Shared/AuxiliaryProcess.h
@@ -185,10 +185,6 @@ private:
     IPC::MessageReceiverMap m_messageReceiverMap;
 
     UserActivity m_processSuppressionDisabled;
-
-#if PLATFORM(COCOA)
-    OSObjectPtr<xpc_object_t> m_priorityBoostMessage;
-#endif
 };
 
 struct AuxiliaryProcessInitializationParameters {
@@ -200,7 +196,6 @@ struct AuxiliaryProcessInitializationParameters {
     HashMap<String, String> extraInitializationData;
     WebCore::AuxiliaryProcessType processType;
 #if PLATFORM(COCOA)
-    OSObjectPtr<xpc_object_t> priorityBoostMessage;
     SDKAlignedBehaviors clientSDKAlignedBehaviors;
 #endif
 };
